--- a/1. command line을 배우기 전.md
+++ b/1. command line을 배우기 전.md
@@ -48,3 +48,23 @@ unix는 1960년대 중반에 개발된 운영체제이다.
 법적으로 유닉스라는 이름을 사용할 수는 없지만 크게 보았을 때 계열에 속하는 것들이다.  
 위에서 말했듯, 이 강의를 통해 배울 것은 진짜 유닉스이건 유닉스 계열이건 상관없이 명령과 그 개념은 모든 종류의 유닉스에서 통한다는 것이다. 
 
+# 4. 자유 소프트웨어 운동
+1980년대, 자유 소프트웨어 운동이 시작되었다.  
+회사들이 만든 소프트웨어들이 독자 규격을 사용하거나, 너무 많은 비용을 요구하는 등 할 수 있는 것들을 제한하자 나타난 운동이다.  
+이 자유 소프트웨어 운동은 컴퓨터와 그 소프트웨어는 사용자간의 협력을 차단해서는 안되며, 사이버 공간에서의 모두가 자유로워야 한다는 철학을 담고있다.  
+사용자에게는 소프트웨어를 사용, 복사, 배포, 공부, 수정 및 개선할 권리가 있어야 한다는 내용이 담긴 운동이다.
+
+# 5. gnu 프로젝트
+리처드 스톨먼이 이끈 GNU 운동이란 자유 소프트웨어가 아니었던 유닉스의 기능들을 모두 가지고 잘 호환되는 자유 소프트웨어를 새로 만드는 것이다. 
+
+# 6. 커널
+커널은 하드웨어와 소프트웨어간의 상호 작용을 가능하게 해주는 것이다. 운영체제는 아니다.
+
+# 7. 리눅스
+리눅스 커널에 GNU프로젝트의 도구와 기타 다른 결과물들이 모인 것으로 완전히 자유로운 소프트웨어이다.  
+무료이고, 원하는 대로 건드릴 수도 있고, 우리가 따로 만든 버전도 판매할 수 있다. 
+
+# 8. 리눅스 배포판
+리눅스 커널과 다양한 GNU도구, 공식 문서, 패키지 관리자, 데스크탑 환경 등 모두를 아우르는 것이다.  
+1000개가 넘는 배포판이 있고, 대표적으로는 페도라와 우분투가 대표적이다. 
+
